sort some theming files, add text-align-last, fix a minor issue in x-lement

--- a/assets/scss/_generic/settings-helper.scss
+++ b/assets/scss/_generic/settings-helper.scss
@@ -171,6 +171,12 @@ $map-text-align : (
     "r" : ( right  , 0, 0, 0, 0, 1 ),
 );
 
+$map-text-align-last : (
+    "l" : ( left   , 0, 0, 0, 0, 0 ),
+    "c" : ( center , 0, 0, 0, 0, 0 ),
+    "r" : ( right  , 0, 0, 0, 0, 0 ),
+);
+
 
 
 // ********************************************************************************
